--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_fonts: ^2.1.0
   animated_text_kit: ^4.2.1
   flutter_svg: ^0.22.0
+  url_launcher: ^6.0.9
   
 
 dev_dependencies:
