--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: subosito/flutter-action@v1
       - uses: erickzanardo/flutter-gh-pages@v6
         with:
-          workingDir: ./
+          workingDir: ./web/
