--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   flutter_svg: ^0.22.0
   url_launcher: ^6.0.9
+  flutter_screenutil: ^5.0.0+2
   
 
 dev_dependencies:
